--- a/desktop.ini
+++ b/desktop.ini
@@ -1,5 +1,5 @@
 [.ShellClassInfo]
-IconResource=C:\Users\Billy Wong\Pictures\windows icons\icons8-bookmark-50.ico,0
+IconResource=C:\WINDOWS\System32\SHELL32.dll,43
 [ViewState]
 Mode=
 Vid=
