Adding Cloudinary photo service

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -7,5 +7,10 @@
     }
   },
   "AllowedHosts": "*",
-  "TokenKey": "This is a token string"
+  "TokenKey": "This is a token string",
+  "CloudinarySettings": {
+    "CloudName": "dti3i6pbs",
+    "ApiKey": "669223236688653",
+    "ApiSecret": "v5yp056ifQAgo2ji551kUb9Zafk"
+  }
 }
