--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,28 @@
 {
-    "cSpell.words": [
-        "tabset",
-        "toastr"
-    ]
+	"editor.formatOnSave": true,
+	"cSpell.words": ["tabset", "toastr"],
+	"[html]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	},
+	"[javascript]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	},
+	"[typescript]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	},
+	"[javascript|react]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	},
+	"[typescript|react]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	},
+	"[less]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	},
+	"[css]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	},
+	"[json]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	}
 }
