--- a/client/package.json
+++ b/client/package.json
@@ -37,7 +37,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.16",
-    "@angular/cli": "~12.2.16",
+    "@angular/cli": "^13.2.5",
     "@angular/compiler-cli": "~12.2.16",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
