--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "ngx-spinner": "^13.1.1",
     "ngx-timeago": "^2.0.0",
     "ngx-toastr": "^14.1.3",
+    "npm-check": "^5.9.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
