--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=5432;User Id=appuser;Password=Pa1912w0rd;Database=datingapp"
+    "DefaultConnection": "Server=localhost;Port=5432;User Id=billywang;Password=Pa141w0rd;Database=livechatdb"
   },
+  "TokenKey": "super secret unguessable key",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
