--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,7 +1,5 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
-ssl
-
 # compiled output
 /dist
 /tmp
@@ -14,7 +12,6 @@ ssl
 
 # profiling files
 chrome-profiler-events*.json
-speed-measure-plugin*.json
 
 # IDEs and editors
 /.idea
@@ -34,6 +31,7 @@ speed-measure-plugin*.json
 .history/*
 
 # misc
+/.angular/cache
 /.sass-cache
 /connect.lock
 /coverage
@@ -46,4 +44,3 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
-.angular/cache/
