--- a/client/package.json
+++ b/client/package.json
@@ -5,54 +5,35 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.2.4",
-    "@angular/cdk": "^13.2.4",
-    "@angular/common": "~13.2.4",
-    "@angular/compiler": "~13.2.4",
-    "@angular/core": "~13.2.4",
-    "@angular/forms": "~13.2.4",
-    "@angular/platform-browser": "~13.2.4",
-    "@angular/platform-browser-dynamic": "~13.2.4",
-    "@angular/router": "~13.2.4",
-    "@kolkov/ngx-gallery": "^1.2.3",
-    "@microsoft/signalr": "^6.0.2",
-    "@schematics/angular": "^9.1.0",
-    "bootstrap": "^4.6.1",
-    "bootswatch": "^5.1.3",
-    "font-awesome": "^4.7.0",
-    "ng2-file-upload": "^1.4.0",
-    "ngx-bootstrap": "^8.0.0",
-    "ngx-spinner": "^13.1.1",
-    "ngx-timeago": "^2.0.0",
-    "ngx-toastr": "^14.2.1",
-    "npm-check": "^5.9.2",
-    "rxjs": "^7.5.4",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.3"
+    "@angular/animations": "~13.1.0",
+    "@angular/common": "~13.1.0",
+    "@angular/compiler": "~13.1.0",
+    "@angular/core": "~13.1.0",
+    "@angular/forms": "~13.1.0",
+    "@angular/platform-browser": "~13.1.0",
+    "@angular/platform-browser-dynamic": "~13.1.0",
+    "@angular/router": "~13.1.0",
+    "rxjs": "~7.4.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.2.5",
-    "@angular/cli": "^13.2.5",
-    "@angular/compiler-cli": "~13.2.4",
-    "@types/jasmine": "^3.10.3",
-    "@types/node": "^17.0.21",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "^4.0.1",
-    "jasmine-spec-reporter": "^7.0.0",
-    "karma": "~6.3.16",
+    "@angular-devkit/build-angular": "~13.1.2",
+    "@angular/cli": "~13.1.2",
+    "@angular/compiler-cli": "~13.1.0",
+    "@types/jasmine": "~3.10.0",
+    "@types/node": "^12.11.1",
+    "jasmine-core": "~3.10.0",
+    "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "^2.2.0",
+    "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.7.0",
-    "protractor": "~7.0.0",
-    "ts-node": "^10.5.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.5.5"
+    "karma-jasmine-html-reporter": "~1.7.0",
+    "typescript": "~4.5.2"
   }
 }
