--- a/.github/workflows/main_live-chat-app.yml
+++ b/.github/workflows/main_live-chat-app.yml
@@ -22,6 +22,9 @@ jobs:
           dotnet-version: '8.x'
           include-prerelease: true
 
+      - name: Build Angular
+        run: ng build
+        
       - name: Build with dotnet
         run: dotnet build --configuration Release
 
