--- a/.github/workflows/main_live-chat-app.yml
+++ b/.github/workflows/main_live-chat-app.yml
@@ -22,6 +22,9 @@ jobs:
           dotnet-version: '8.x'
           include-prerelease: true
 
+      - name: Install npm
+        run: npm install
+        
       - name: Build Angular
         run: ng build
         
